--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,12 @@
     "module": "commonjs",
     "target": "es6",
     "sourceMap": true,
-    "declaration": true
+    "declaration": true,
+    "outDir": "./lib"
   },
+  "include": [
+    "src"
+  ],
   "exclude": [
     "node_modules"
   ],
