Added package scope

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "ludicolo-container",
+  "name": "@ashuey/ludicolo-container",
   "version": "1.0.0",
-  "main": "index.js",
   "license": "MIT",
   "devDependencies": {
     "typescript": "^3.7.2"
