--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
   "name": "@ashuey/ludicolo-container",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "license": "MIT",
   "devDependencies": {
-    "typescript": "^3.7.2"
+    "@types/jest": "^26.0.9",
+    "jest": "^26.2.2",
+    "ts-jest": "^26.1.4",
+    "typescript": "^3.9.7"
   },
-  "files": ["lib/**/*"]
+  "files": [
+    "lib/**/*"
+  ],
+  "scripts": {
+    "test": "jest"
+  }
 }
