--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "target": "es6",
     "sourceMap": true,
     "declaration": true,
-    "outDir": "./lib"
+    "outDir": "./lib",
+    "noImplicitAny": true
   },
   "include": [
     "src"
