--- a/package.json
+++ b/package.json
@@ -1,13 +1,30 @@
 {
   "name": "@ashuey/ludicolo-container",
-  "version": "2.0.2",
+  "description": "A lightweight dependency injection container",
+  "keywords": [
+    "ioc",
+    "di",
+    "javascript",
+    "typescript",
+    "dependency",
+    "dependency injection",
+    "dependency inversion",
+    "inversion of control container"
+  ],
+  "version": "2.0.3",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ashuey/ludicolo-container.git"
+  },
+  "bugs": "https://github.com/ashuey/ludicolo-container/issues",
   "devDependencies": {
     "@types/jest": "^26.0.9",
     "jest": "^26.2.2",
     "ts-jest": "^26.1.4",
     "typescript": "^3.9.7"
   },
+  "main": "lib/index.js",
   "files": [
     "lib/**/*"
   ],
