--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dependency inversion",
     "inversion of control container"
   ],
-  "version": "2.0.3",
+  "version": "2.0.4",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
     "typescript": "^3.9.7"
   },
   "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "files": [
     "lib/**/*"
   ],
